--- a/requirements.txt
+++ b/requirements.txt
@@ -31,18 +31,19 @@ Jinja2==3.1.6
 jiter==0.9.1
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.2.17
-langchain-core==0.2.43
-langchain-openai==0.1.25
-langchain-text-splitters==0.2.4
-langsmith==0.1.147
+langchain==0.3.27
+langchain-core==0.3.78
+langchain-openai==0.3.34
+langchain-text-splitters==0.3.11
+langsmith==0.4.32
 Mako==1.3.10
 MarkupSafe==2.1.5
 multidict==6.1.0
-numpy==1.24.4
+numpy==1.25.2
 openai==1.109.1
 orjson==3.10.15
 packaging==24.2
+pandas==2.3.3
 propcache==0.2.0
 pydantic==2.10.6
 pydantic_core==2.27.2
@@ -52,6 +53,8 @@ PyYAML==6.0.3
 regex==2024.11.6
 requests==2.32.4
 requests-toolbelt==1.0.0
+sentence_transformers==5.1.1
+faiss_cpu==1.12.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
